add package storage s3 and local

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,7 +1,17 @@
 APP_ENV=development
 
+JWT_SECRET=mysecretkey
+
+FILE_STORAGE_ENV=local
+
 DB_USER=boilerplate
 DB_PASSWORD=boilerplate
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=boilerplate
+
+AWS_USE_S3=false
+AWS_REGION=eu-west-1
+AWS_BUCKET_NAME=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
